--- a/design/criandopublisher.html
+++ b/design/criandopublisher.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,15 +22,484 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./guias.html" class="js-button">Anterior</a>
+        <a href="./illustrator.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Criando uma publicação no Publisher
         </h1>
 
         <p>
+            Como exercício, desenvolveremos agora nossa própria revista, com uma matéria apenas, é claro, mas com todo o
+            conceito que uma revista pode ter e com os recursos principais do Publisher.
         </p>
+
+        <h3>
+            Mãos à obra!
+        </h3>
+        <p>
+            1. Abra o Publisher.
+        </p>
+        <p>
+            2. Clique em Novo e escolha “Mais Tamanhos de Página”.
+        </p>
+        <p>
+            3. Dê um duplo-clique em “A5 (Retrato)”.
+        </p>
+        <h3>
+            Design de Página
+        </h3>
+        <p>
+            1. Clique no menu Design de Página.
+        </p>
+        <p>
+            2. Clique na opção Margens e escolha Estreita.
+        </p>
+        <p>
+            3. Pronto, agora já temos nosso arquivo configurado e pronto para ser desenvolvido.
+        </p>
+        <p>
+            4. É possível alterar outros elementos de página, no entanto, alteraremos na Página Mestra, e você entenderá
+            porquê.
+        </p>
+
+        <h3>
+            Páginas Mestras
+        </h3>
+        <p>
+            As páginas-mestre servem para criar um ou mais layout padrão que serão aplicados à todas as páginas ou a
+            páginas diferentes. Por exemplo, podemos criar um layout para capas de capítulos, e outro para o conteúdo,
+            ou criar um layout paras as páginas à direita e outro para as páginas à esquerda.
+        </p>
+        <p>
+            1. Ainda no menu Design de Página, clique em Páginas Mestras e escolha Editar Páginas Mestras.
+        </p>
+        <p>
+            2. Clique em Mostrar Cabeçalho e Rodapé.
+        </p>
+        <p>
+            3. No cabeçalho, escreva: “A História do Papai Noel”.
+        </p>
+        <p>
+            4. No Rodapé, clique em Inserir Número de Página.
+        </p>
+        <p class="notas">
+            Você pode alternar entre Cabeçalho e Rodapé clicando em “Mostrar Cabeçalho e Rodapé”.
+        </p>
+        <p>
+            Clique no menu Página Inicial e configure, tanto o cabeçalho como o número de página como Calibri 11
+            negrito, escolha uma cor de fonte roxo escuro para ambos. Formate o número de página como Centralizado.
+        </p>
+        <p class="notas">
+            Enquanto estivermos editando a Página-Mestra o número de página é representado por uma cerquilha (#).
+        </p>
+        <p>
+            5. Retorne ao menu Design de Página, vamos agora alterar o fundo.
+        </p>
+        <p>
+            6. Clique em Plano de Fundo e escolha Mais Planos de Fundo. Escolha Preenchimento de Gradiente.
+        </p>
+        <p>
+            7. Crie uma gradação que comece no branco, passe pelo verde-claro e termine no azul-claro. Assim:
+        </p>
+        <div style="height: 45px; width: 100%; background-image: linear-gradient(90deg, #FFF, #5F5, #5FF);
+            border: black 1px solid; box-shadow: 0 0 8px #FFF9;"></div>
+
+        <p>
+            8. Verifique se o ângulo está configurado como 90° e clique em Ok.
+        </p>
+        <p>
+            9. A última etapa de configuração de nossa página-mestra é desenhar uma borda personalizada, para tal
+            utilizaremos um retângulo.
+        </p>
+        <p>
+            10. Clique em &rightarrow; Inserir &rightarrow; Formas &rightarrow; Retângulo.
+        </p>
+        <p>
+            11. Desenhe um retângulo utilizando as interseções da margem interna da página.
+        </p>
+        <p>
+            12. Clique no menu Forma e, em “Preenchimento da Forma”, selecione “Sem Preenchimento”.
+        </p>
+        <p>
+            13. Em “Contorno da Forma” escolha &rightarrow; Traços &rightarrow; Mais Linhas.
+        </p>
+        <p>
+            14. Em “Tipo de Composição” escolha a opção 3pt com duas linhas finas.
+        </p>
+        <p>
+            15. Em Cor, escolha uma cor roxo-escuro.
+        </p>
+        <p>
+            16. Clique em Ok.
+        </p>
+        <p>
+            17. Clique no menu Página Mestra e selecione Fechar Página Mestra. Com isso voltamos a editar as páginas
+            independentes.
+        </p>
+
+        <h3>
+            Guias
+        </h3>
+        <p>
+            As guias servem para alinhar e organizar facilmente elementos gráficos como imagens e caixas de texto numa
+            página, além de garantir precisão no dimensionamento desses objetos.
+        </p>
+        <p>
+            1. Clique em &rightarrow; Design de Página &rightarrow; Guias &rightarrow; Guias de Régua.
+        </p>
+        <p>
+            2. Na caixa de texto, digite 7 e clique em “Definir”, a régua será inserida na lista.
+        </p>
+        <p>
+            3. Digite 7,2 e clique em “Definir”. Agora temos duas réguas horizontais, vamos inserir as verticais.
+        </p>
+        <img src="./criandopublisher1.png" alt="" style="width: 200px; float: left; margin: 15px;">
+
+        <p>
+            4. Clique na guia Vertical.
+        </p>
+        <p>
+            5. Digite 8,5 e clique em “Definir”.
+        </p>
+        <p>
+            6. Digite 8,7 e clique em “Definir”.
+        </p>
+        <p>
+            7. Se inserir uma guia sem querer você pode removê-la.
+        </p>
+        <p>
+            8. Clique em Ok.
+        </p>
+        <p>
+            9. Você já pode verificar as guias que inserimos que agora dividem a página em quatro partes, as duas partes
+            superiores serão utilizadas para inserir uma única imagem, as duas de baixo receberão caixas de texto.
+        </p>
+        <p>
+            10. Note na imagem ao lado como deverá ser o layout de nossa página para inserirmos os elementos.
+        </p>
+
+
+        <h3>
+            Caixas de Texto
+        </h3>
+        <p>
+            1. Clique no menu “Inserir” e selecione “Desenhar Caixa de Texto”.
+        </p>
+        <p>
+            2. Utilize a interseção entre as guias de dentro para desenhar uma caixa de texto na parte inferior
+            esquerda. Repita o mesmo para a parte inferior direita.
+        </p>
+        <p class="notas">
+            Para selecionar uma caixa de texto criada devemos clicar em sua borda. Para sair de uma caixa de texto
+            devemos clicar do lado de fora.
+        </p>
+
+        <h3>
+            Formatar as Caixas de Texto
+        </h3>
+        <p>
+            1. Selecione a caixa de texto da esquerda e clique no menu Forma.
+        </p>
+        <p>
+            2. Selecione Preenchimento da Forma &rightarrow; Mais Cores de Preenchimento.
+        </p>
+        <p>
+            3. Defina a cor como branca e a transparência como 50%. Clique em Ok.
+        </p>
+        <p>
+            4. Repita o mesmo para a da direita, mas defina a cor como roxo escuro e a transparência como 0.
+        </p>
+        <h3>
+            Elementos Gráficos
+        </h3>
+        <p>
+            Por último, antes de começarmos a inserir o texto, vamos reservar um espaço para imagem que ocupe a parte
+            superior inteira da página.
+        </p>
+        <p>
+            1. Clique em &rightarrow; Inserir &rightarrow; Espaço Reservado para Imagem.
+        </p>
+        <p>
+            2. Utilize as guias internas da parte de cima para desenhar uma caixa.
+        </p>
+        <p>
+            3. Note que apenas aparece um ícone no meio do espaço, ele será utilizado para inserir uma imagem em cada
+            página quando finalizarmos o layout.
+        </p>
+
+        <h3>
+            Inserir Páginas
+        </h3>
+        <p>
+            Para inserir nossos textos devemos definir as margens e o alinhamento das caixas de texto, em seguida
+            inserir a quantidade de páginas necessárias já configuradas. Para tal, faça o seguinte:
+        </p>
+        <p>
+            1. Clique dentro da caixa de texto da esquerda.
+        </p>
+        <p>
+            2. Clique no menu Caixa de Texto.
+        </p>
+        <p>
+            3. Em “Alinhamento” &rightarrow; Escolha o alinhamento na “Parte Inferior Esquerda”. Em “Margens” escolha
+            “Larga”.
+        </p>
+        <p>
+            4. Faça o mesmo com a caixa de texto da direita, mas escolha o alinhamento na Parte Inferior Direita.
+        </p>
+        <p>
+            5. Clique com o botão direito sobre a Página 1 na Barra de Páginas, do lado esquerdo do espaço de trabalho.
+            E selecione: Inserir Página.
+        </p>
+        <p>
+            6. Em Número de Páginas Novas digite 2, e marque a opção “Duplicar todos os objetos na página 1”. Essa opção
+            fará com que todas as páginas criadas contenham os mesmos elementos gráficos que configuramos.
+        </p>
+        <p>
+            7. Clique em Ok.
+        </p>
+        <p>
+            8. Selecione a página 1.
+        </p>
+
+        <h3>
+            Textos da Página 1 – Caixa de texto esquerda
+        </h3>
+        <p>
+            Vamos agora inserir o texto. Na caixa de texto da esquerda na página 1, digite este texto:
+        </p>
+
+        <div class="nicolau">
+            <h3>
+                A história do Papai Noel
+            </h3>
+            <p>
+                O Papai Noel é uma figura natalina muito conhecida por se locomover em um trenó puxado por renas. Ele
+                visita casas na véspera do Natal para deixar presentes para as crianças bem-comportadas. Essa figura
+                natalina tem sua origem ligada com São Nicolau, bispo cristão da Idade Antiga, mas as tradições
+                natalinas também possuem elementos da cultura pagã.
+            </p>
+        </div>
+
+        <p>
+            1. Clique no menu Página Inicial.
+        </p>
+        <p>
+            2. Selecione o título e formate-o conforme abaixo:
+        </p>
+        <p>
+            3. Fonte Garamond, Negrito, Tamanho 18, Alinhamento Justificado, Cor Roxo.
+        </p>
+        <p>
+            4. Selecione o restante do texto e formate-o conforme abaixo:
+        </p>
+        <p>
+            5. Fonte Garamond, Normal, Tamanho 18, Alinhamento Justificado, Cor Preto.
+        </p>
+
+        <h3>
+            Textos da Página 1 – Caixa de texto direita
+        </h3>
+        <p>
+            Na caixa de texto da direita na página 1, digite este texto:
+        </p>
+        <div class="nicolau">
+            <h3>
+                Qual a origem do Papai Noel?
+            </h3>
+            <p>
+                O Papai Noel é originário de uma figura que habitava uma região que atualmente faz parte do território
+                da Turquia. Estamos falando de São Nicolau de Mira, conhecido também como Nicolau Taumaturgo, um bispo
+                cristão que morou na Ásia Menor entre os séculos III e IV d.C. Esse bispo ficou muito conhecido por sua
+                generosidade e obras de caridade.
+            </p>
+        </div>
+        <p>
+            1. Selecione todo o texto e formate-o conforme abaixo:
+        </p>
+        <p>
+            2. Fonte Cambria, Negrito, Tamanho 14, Alinhamento Justificado, Cor Amarelo Claro.
+        </p>
+        <p>
+            3. Finalizada a Página 1! Salve seu arquivo.
+        </p>
+        <p class="notas">
+            Você pode selecionar todo o texto num documento ou num elemento de texto em diversos aplicativos usando o
+            atalho <span class="codigo">Ctrl+T</span>.
+        </p>
+        <h3>
+            Textos da Página 2 – Caixa de texto esquerda
+        </h3>
+        <p>
+            Na caixa de texto da esquerda na página 2, digite este texto:
+        </p>
+        <div class="nicolau">
+            <p>
+                Conta-se que Nicolau era filho de uma família grega cristã muito rica. Ele teria ficado órfão muito cedo
+                e então decidiu usar a riqueza que ele herdou para ajudar as pessoas mais necessitadas. Uma das
+                histórias mais conhecidas de São Nicolau envolve um homem pobre e suas três filhas. Esse homem não tinha
+                condições de fornecer um dote para que suas filhas se casassem. Sem um casamento, essas garotas,
+                provavelmente, seriam obrigadas a se prostituir para sobreviver. Para evitar que isso acontecesse, São
+                Nicolau decidiu doar os valores dos dotes para que as três garotas pudessem se casar.
+            </p>
+        </div>
+        <p>
+            1. Selecione todo o texto e formate-o conforme abaixo:
+        </p>
+        <p>
+            2. Fonte Garamond, Normal, Tamanho 15, Alinhamento Justificado, Cor Preto.
+        </p>
+        <h3>
+            Textos da Página 2 – Caixa de texto direita
+        </h3>
+        <p>
+            Na caixa de texto da direita na página 2, digite este texto:
+        </p>
+        <div class="nicolau">
+            <p>
+                O Papai Noel está relacionado com São Nicolau, bispo grego que habitou a Ásia Menor nos séculos III e IV
+                d.C. e ficou conhecido por suas obras de caridade.
+            </p>
+        </div>
+        <p>
+            1. Selecione todo o texto e formate-o conforme abaixo:
+        </p>
+        <p>
+            2. Fonte Cambria, Negrito, Tamanho 22, Alinhamento Justificado, Cor Amarelo Claro.
+        </p>
+        <p>
+            3. Salve o arquivo.
+        </p>
+        <h3>
+            Textos da Página 3 – Caixa de texto esquerda
+        </h3>
+        <p>
+            Na caixa de texto da esquerda na página 3, digite este texto:
+        </p>
+        <div class="nicolau">
+            <p>
+                Os presentes de São Nicolau para as três filhas foram dados secretamente e possibilitou que todas elas
+                se casassem. Ele deixou um dote por vez na casa desse homem pobre e, na terceira vez que compareceu, ele
+                foi descoberto pelo pai das garotas, que o agradeceu pela boa obra.
+            </p>
+        </div>
+        <p>
+            1. Selecione todo o texto e formate-o conforme abaixo:
+        </p>
+        <p>
+            2. Fonte Garamond, Normal, Tamanho 20, Alinhamento Justificado, Cor Preto.
+        </p>
+        <h3>
+            Textos da Página 3 – Caixa de texto direita
+        </h3>
+        <p>
+            Na caixa de texto da direita na página 3, digite este texto:
+        </p>
+        <div class="nicolau">
+            <p>
+                São Nicolau foi canonizado pela Igreja Católica e pela Ortodoxa, pelas suas boas obras e pelos milagres
+                que foram atribuídos a ele. Ele é o patrono da Grécia e da Rússia, bem como dos marinheiros, pescadores,
+                etc. A imagem dele é a de um homem idoso, com roupas vermelhas e uma grande barba branca. É uma imagem
+                semelhante à do Papai Noel moderno.
+            </p>
+            <p><i>
+                    Fonte: https://mundoeducacao.uol.com.br/natal-1/papai-noel.htm
+                </i></p>
+        </div>
+        <p>
+            1. Selecione todo o texto e formate-o conforme abaixo:
+        </p>
+        <p>
+            2. Fonte Cambria, Negrito, Tamanho 13, Alinhamento Justificado, Cor Amarelo Claro.
+        </p>
+        <p>
+            3. Aplique um estilo Itálico ao texto com o link da fonte.
+        </p>
+        <p>
+            4. Salve o arquivo
+        </p>
+
+        <h3>
+            Letras Capitulares
+        </h3>
+        <p>
+            Vamos agora inserir as imagens no topo de cada página e também as letras capitulares, que são as iniciais
+            grandes nos parágrafos. Para inserir as capitulares faça o seguinte:
+        </p>
+        <p>
+            1. Na página 1, clique sobre a letra O no começo do parágrafo.
+        </p>
+        <p>
+            2. Clique no menu Caixa de Texto, selecione Letra Capitular e escolha a segunda opção.
+        </p>
+        <p>
+            3. Faça o mesmo com as páginas 2 e 3.
+        </p>
+        <p>
+            4. Note que apenas as caixas de texto da esquerda possuem letra capitular.
+        </p>
+        <h3>
+            Imagens
+        </h3>
+        <p>
+            1. Para inserir as imagens no topo das páginas, primeiro entre em alguns bancos de imagens gratuitos e baixe
+            três imagens de sua preferência, relacionadas com Natal, Papai Noel ou São Nicolau de Mira, e salve-as em
+            sua pasta.
+        </p>
+        <p>
+            2. Em seguida basta clicar no ícone de imagem em cada página e procurar pela imagem em sua pasta e inserir.
+        </p>
+        <p>
+            3. E finalizamos nossa revista! Vamos agora exportar também como .pdf para sua pasta.
+        </p>
+        <p>
+            4. Salve o arquivo.
+        </p>
+        <h3>
+            Exportação
+        </h3>
+        <p>
+            1. Para exportar o documento, clique em  Arquivo  Exportar  Criar PDF/XPS.
+        </p>
+        <p>
+            2. Na janela que se abriu, clique em  Opções  Opções de Impressão.
+        </p>
+        <p>
+            3. Em Tamanho, selecione A5.
+        </p>
+        <p>
+            4. Clique em Ok. Clique em Ok novamente.
+        </p>
+        <p>
+            5. Procure sua pasta e clique em Publicar.
+        </p>
+        <p>
+            6. Está finalizado nosso exercício! Verifique nas páginas seguintes o resultado e compare com o que você
+            criou.
+        </p>
+
+        <img src="./criandopublisher1.jpg" alt="">
+        <img src="./criandopublisher2.jpg" alt="">
+        <img src="./criandopublisher3.jpg" alt="">
+
+        <style>
+            .nicolau {
+                color: var(--cinzaLeve) !important;
+                border: 1px solid;
+                border-image: var(--gradiente45);
+                padding: 15px;
+                display: block;
+                width: 90%;
+                margin: 30px auto 30px auto;
+                background-color: var(--pretoDark);
+            }
+
+            .nicolau h3 {
+                color: var(--AMARELO);
+            }
+        </style>
 
     </div>
 </div>
