--- a/design/guias.html
+++ b/design/guias.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -23,16 +22,23 @@
 
 <div class="js-page">
     <div class="js-post">
-        <a href="." class="js-button">Anterior</a>
-        <a href="." class="js-button" style="float: right;">Próximo</a>
+        <a href="./formas.html" class="js-button">Anterior</a>
+        <a href="./criandopublisher.html" class="js-button" style="float: right;">Próximo</a>
 
 
         <h1>
+            Guias
         </h1>
 
         <p>
+            Quer trabalhando com formas, imagens ou caixas de texto, um design bem-feito tem seus elementos organizados
+            de maneira regular, para isso, aplicações de editoração, assim como as de design gráfico, fornecem a
+            possibilidade de criação de guias para ajudar a posicionar esses elementos na página. Possuir um conjunto de
+            guias configuradas de forma a posicionar todos os elementos gráficos de uma arte é a melhor maneira de
+            garantir um layout bem organizado. Neste exercício que faremos agora, veremos como inserir guias e formas
+            numa arte para dar um aspecto mais bonito a um flyer simples.
         </p>
-
+        <br><br><br>
     </div>
 </div>
 
